[RLS] Do not orphan main graphics layer in tests

CompositedLayerMapping::UpdateInternalHierarchy will orphan the main
graphics layer if there are no special ancestor layers (for clips or
squashing). PaintLayerCompositor::UpdateIfNeeded was responsible for
re-parenting the main graphics layer using ParentForContentLayers, but
this had a bug and would not re-parent in test configurations, leaving
the graphics layer orphaned.

Bug: 841423
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Id5c9fe5b87e9a5c2d47cff4a105c13a885d82d48
Reviewed-on: https://chromium-review.googlesource.com/1056056
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558508}
Former-commit-id: 33ff2ba21be34f7c8c24d181f28dcf034c3147c8